# papertrail

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  pixi.toml  properdocs.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docs.yml  tests.yml
docs/: data-sources.md  development.md  gen_ref_pages.py  getting-started.md  impact-factor.md  index.md  plotting.md
docs/reference/: index.md
src/papertrail/: __init__.py  author.py  cli.py  exceptions.py  models.py
src/papertrail/cache/: __init__.py  local_db.py
src/papertrail/exporters/: __init__.py  bibtex.py  csv_exporter.py  json_exporter.py
src/papertrail/fetchers/: __init__.py  ads.py  base.py  openalex.py
src/papertrail/metrics/: __init__.py  bibliometric.py  impact_factor.py
src/papertrail/plots/: __init__.py  bokeh_plotter.py
src/papertrail/server/: __init__.py  cache_app.py
tests/: conftest.py  test_ads_fetcher.py  test_author.py  test_exporters.py  test_impact_factor.py  test_metrics.py  test_models.py  test_plots.py
