[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "papertrail"
version = "0.1.0"
description = "Retrieve author publications and compute bibliometric metrics"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Michele Peresano", email = "peresano@mpp.mpg.de" }]
keywords = ["bibliometrics", "publications", "impact-factor", "academic", "scientometrics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
dependencies = [
    "pyalex>=0.13",
    "ads>=0.12",
    "bokeh>=3.4",
    "python-dotenv>=1.0",
    "reportlab>=4.2",
    "pydantic>=2.0",
    "pandas>=2.0",
    "typer>=0.9",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pre-commit>=3.7",
    "pandas-stubs>=2.0",
]
docs = [
    "properdocs>=1.6",
    "mkdocs-materialx>=10.1.5",
    "mkdocstrings[python]>=0.25",
    "mkdocs-gen-files>=0.5",
    "mkdocs-literate-nav>=0.6",
    "mkdocs-section-index>=0.3",
]

[project.scripts]
papertrail = "papertrail.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/papertrail"]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "ANN", # flake8-annotations
    "S",   # bandit security
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "RUF", # ruff-specific rules
]
ignore = [
    "D105",   # missing docstring in magic method
    "D107",   # missing docstring in __init__
    "ANN101", # missing type annotation for self
    "ANN102", # missing type annotation for cls
    "ANN204", # missing return type annotation for special method
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"tests/**" = ["S101", "ANN", "D"]
"src/papertrail/cli.py" = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"
packages = ["papertrail"]

[[tool.mypy.overrides]]
module = ["pyalex.*", "ads.*", "dotenv.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["bokeh.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["papertrail.plots.bokeh_plotter"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["reportlab.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--cov=papertrail", "--cov-report=term-missing", "-v"]

[tool.coverage.run]
source = ["src/papertrail"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
